update paths in all file depends on the new structure and update vercel file content

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../css/components/footer.css">
+<link rel="stylesheet" href="/css/components/footer.css">
 <footer class="site-footer">
     <div class="footer-main">
         <div class="container">
