--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../css/components/navbar.css">
+<link rel="stylesheet" href="/css/components/navbar.css">
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
         <!-- Logo -->
