--- a/components/product-card.html
+++ b/components/product-card.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../css/components/product-card.css">
+<link rel="stylesheet" href="/css/components/product-card.css">
 <!-- product-card.html -->
 <div class="product-card-template" style="display: none;">
     <div class="col-md-4 col-lg-3 mb-4 product-card">
